[package]
name = "arcanum-zkp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Zero-knowledge proofs: Bulletproofs, Schnorr proofs, commitments"
keywords = ["cryptography", "zero-knowledge", "bulletproofs", "zkp"]
categories = ["cryptography"]

[dependencies]
arcanum-core = { version = "0.1.0", path = "../arcanum-core" }

# Bulletproofs (uses curve25519-dalek-ng internally)
bulletproofs = "4.0"
merlin = "3.0"

# Curve arithmetic for Bulletproofs compatibility
# Note: bulletproofs uses curve25519-dalek-ng, so we need to use that version
curve25519-dalek-ng = "4.1"

# Standard curve25519-dalek for non-bulletproofs code
curve25519-dalek = { version = "4.1", features = ["rand_core", "digest"] }

# Utilities
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
hex = "0.4"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
default = ["bulletproofs", "schnorr-proofs"]
bulletproofs = []
schnorr-proofs = []
serde = ["dep:serde"]

[[bench]]
name = "zkp_bench"
harness = false
