[package]
name = "arcanum-formats"
description = "Cryptographic data format encoding and parsing for the Arcanum engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["cryptography", "pem", "encoding", "formats"]
categories = ["cryptography", "encoding"]

[features]
default = ["std", "pem", "base64", "hex"]
std = []
pem = []
base64 = []
hex = []

[dependencies]
arcanum-core = { workspace = true }

# Encoding
base64ct = { workspace = true }
hex = { workspace = true }
pem-rfc7468 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
