[package]
name = "arcanum-hash"
description = "Hash functions and key derivation for the Arcanum cryptographic engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["cryptography", "hash", "sha", "blake3", "argon2"]
categories = ["cryptography"]

[features]
default = ["sha2", "sha3", "blake3", "kdf"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]
blake2 = ["dep:blake2"]
blake3 = ["dep:blake3"]
kdf = ["argon2", "hkdf", "scrypt"]
argon2 = ["dep:argon2"]
hkdf = ["dep:hkdf"]
scrypt = ["dep:scrypt"]
pbkdf2 = ["dep:pbkdf2"]
mac = ["dep:hmac"]
all = ["sha2", "sha3", "blake2", "blake3", "kdf", "pbkdf2", "mac"]

[dependencies]
arcanum-core = { workspace = true }

# SHA-2 family
sha2 = { workspace = true, optional = true }

# SHA-3 family
sha3 = { workspace = true, optional = true }

# Blake family
blake2 = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }

# Key derivation
argon2 = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
scrypt = { workspace = true, optional = true }
pbkdf2 = { workspace = true, optional = true }

# MACs
hmac = { workspace = true, optional = true }

# Core traits
digest = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "hash_benchmarks"
harness = false
