[package]
name = "arcanum-keystore"
description = "Secure key storage backends for the Arcanum cryptographic engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["cryptography", "keystore", "security", "keys"]
categories = ["cryptography"]

[features]
default = ["std", "memory", "file", "encrypted"]
std = []
memory = []
file = ["std"]
encrypted = ["arcanum-symmetric", "arcanum-hash"]

[dependencies]
arcanum-core = { workspace = true }
arcanum-symmetric = { workspace = true, optional = true }
arcanum-hash = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, features = ["fs", "sync"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Security
zeroize = { workspace = true }
secrecy = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
base64ct = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3.10"
