[package]
name = "arcanum-protocols"
description = "Cryptographic protocol implementations for the Arcanum engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["cryptography", "protocols", "security", "key-exchange"]
categories = ["cryptography"]

[features]
default = ["std", "key-exchange", "secure-channel"]
std = []
key-exchange = ["arcanum-asymmetric"]
secure-channel = ["arcanum-symmetric", "arcanum-hash"]

[dependencies]
arcanum-core = { workspace = true }
arcanum-symmetric = { workspace = true, optional = true }
arcanum-asymmetric = { workspace = true, optional = true }
arcanum-hash = { workspace = true, optional = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Security
zeroize = { workspace = true }
secrecy = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
rand = { workspace = true }
rand_core = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
