[package]
name = "arcanum-symmetric"
description = "Symmetric encryption algorithms for the Arcanum cryptographic engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["cryptography", "encryption", "aes", "chacha20"]
categories = ["cryptography"]

[features]
default = ["aes", "chacha20"]
aes = ["dep:aes", "dep:aes-gcm", "dep:aes-gcm-siv", "dep:ctr"]
chacha20 = ["dep:chacha20", "dep:chacha20poly1305"]
xchacha20 = ["chacha20"]
legacy = ["dep:blowfish", "dep:twofish", "dep:cast5"]
all = ["aes", "chacha20", "xchacha20", "legacy"]

[dependencies]
arcanum-core = { workspace = true }

# AES family
aes = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
aes-gcm-siv = { workspace = true, optional = true }
ctr = { workspace = true, optional = true }

# ChaCha20 family
chacha20 = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }

# Legacy algorithms (for compatibility)
blowfish = { workspace = true, optional = true }
twofish = { workspace = true, optional = true }
cast5 = { workspace = true, optional = true }

# Core traits
cipher = { workspace = true }
aead = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Encoding and comparison
hex = { workspace = true }
base64ct = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
criterion = { workspace = true }
hex = { workspace = true }

[[bench]]
name = "symmetric_benchmarks"
harness = false
