[package]
name = "arcanum-zkp"
version = "0.1.0"
edition = "2024"
authors = ["Daemoniorum <daemoniorum@persona.dev>"]
description = "Zero-knowledge proofs: Bulletproofs, Schnorr proofs, commitments"
license = "MIT OR Apache-2.0"
repository = "https://github.com/daemoniorum/arcanum"
keywords = ["cryptography", "zero-knowledge", "bulletproofs", "zkp"]
categories = ["cryptography"]

[dependencies]
arcanum-core = { path = "../arcanum-core" }

# Bulletproofs
bulletproofs = "4.0"
merlin = "3.0"

# Curve arithmetic - use curve25519-dalek-ng for bulletproofs compatibility
curve25519-dalek-ng = "4.1"

# Utilities
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
hex = "0.4"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
default = ["bulletproofs", "schnorr-proofs"]
bulletproofs = []
schnorr-proofs = []
serde = ["dep:serde"]

[[bench]]
name = "zkp_bench"
harness = false
